добавление категорий в таблицу по нажатию кнопки и их загрузка

--- a/process_renderer/css/MonthlyBudget.css
+++ b/process_renderer/css/MonthlyBudget.css
@@ -18,7 +18,7 @@
 }
 
 .total-amount .title-with-value .value {
-    font-size: calc(2.5vw);
+    font-size: 2.5vw;
 }
 
 .income-and-expense .title-with-value {
