--- a/process_renderer/css/MonthlyBudget.css
+++ b/process_renderer/css/MonthlyBudget.css
@@ -1,11 +1,20 @@
+.table-header {
+    margin: 0px;
+}
+
 .table-header .table-row {
     vertical-align: middle;
 }
 
+.table-header .table-cell {
+    border: 2px solid rgb(136, 202, 199);
+    padding: 0px 10px;
+}
+
 .table-header .text-in-table-header.big {
-    font-size: 3vw;
+    font-size: 2.5vw;
 }
 
 .table-header .text-in-table-header.small {
-    font-size: 2vw;
+    font-size: 1.5vw;
 }
