архитектура, работа с распред. финансов
Массивная доработка архитектуры проекта,
окончательное формирование обмена данными таблицы распределения финансов
между основным процессом и процессом рендеринга:
	- загрузка типов распределения финансов из базы данных;
	- добавление типа распределения финансов в базу данных;
	- валидация перед добавлением;
	- уведомления о некорректных данных;
	- обработка данных в основном процессе.
Распределение отдельных задач по категориям и вызов
соответствующих функций в контроллерах.

--- a/process_renderer/css/MonthlyBudget.css
+++ b/process_renderer/css/MonthlyBudget.css
@@ -27,6 +27,10 @@
     text-align: center;
 }
 
+.budget-operations-table .table-cell {
+    text-align: center;
+}
+
 .distribution-finances-table-container {
     flex-basis: 100%;
 }
